--- a/themes/fivealive/options/watermelon/scss/_variables.scss
+++ b/themes/fivealive/options/watermelon/scss/_variables.scss
@@ -44,7 +44,7 @@ $btn-primary-badge-bg: #ffffff;
 // $btn-secondary-badge-color: #b51360;
 // $btn-secondary-bg-color: #ffffff;
 
-$btn-info-color: #282828;
+$btn-info-color: #fff;
 $btn-info-bg: #e5d7dc;
 $btn-info-border: #e5d0cf;
 // $btn-info-focus-color: ;
